[project]
name = "nullus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "plwg", email = "56353330+plwg@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
nullus = "nullus/todo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
